--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="header">
       <nav class="nav-bar">
             <a href="#">
-              <img class="header--img" src="fighting-sparrow-demo/Images/Header.png">
+              <img class="header--img" src="./Images/Header.png">
             </a>
 
           <ul class="nav__links">
